# newtry

./: conftest.py  pyproject.toml  test_main_page.py
.github/workflows/: action.yml  action2.yml  action3.yml  actionJ.yml
pages/: base_page.py  cart_page.py  catalogue_page.py  locators.py  login_page.py  main_page.py
