[tool.poetry]
name = "try-actions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "try_actions"}]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
flake8 = "^5.0.4"
selenium = "^4.5.0"
pytest = "^7.2.0"
webdriver-manager = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
